Move parameter max_num_keypts into Tracking

--- a/example/aist/fisyeye.yaml
+++ b/example/aist/fisyeye.yaml
@@ -25,12 +25,18 @@ Camera:
 
   color_order: "RGB"
 
+#=====================#
+# Tracking Parameters #
+#=====================#
+
+Tracking:
+  max_num_keypoints: 2000
+
 #================#
 # orb parameters #
 #================#
 
 Feature:
-  max_num_keypoints: 2000
   scale_factor: 1.2
   num_levels: 8
   ini_fast_threshold: 20
