--- a/example/tum_vi/TUM_VI_stereo.yaml
+++ b/example/tum_vi/TUM_VI_stereo.yaml
@@ -54,13 +54,19 @@ StereoRectifier:
   D_right: [0.0034003170790442797, 0.001766278153469831, -0.00266312569781606, 0.0003299517423931039]
   R_right: [0.9997411981023351, 0.01955199401713946, 0.011629976219300583, -0.019819377433695273, 0.9995311538731381, 0.02333805294307984, -0.011168218078479885, -0.023562511898925578, 0.9996599816627474]
 
+#=====================#
+# Tracking Parameters #
+#=====================#
+
+Tracking:
+  max_num_keypoints: 1000
+  ini_max_num_keypoints: 2000
+
 #================#
 # ORB Parameters #
 #================#
 
 Feature:
-  max_num_keypoints: 1000
-  ini_max_num_keypoints: 2000
   scale_factor: 1.2
   num_levels: 8
   ini_fast_threshold: 20
