--- a/example/tum_rgbd/TUM_RGBD_rgbd_2.yaml
+++ b/example/tum_rgbd/TUM_RGBD_rgbd_2.yaml
@@ -27,24 +27,25 @@ Camera:
 
   color_order: "RGB"
 
+#=====================#
+# Tracking Parameters #
+#=====================#
+
+Tracking:
+  max_num_keypoints: 1000
+  ini_max_num_keypoints: 2000
+  depth_threshold: 40.0
+  depthmap_factor: 5000.0 # Note: Set it to 1.0 for the rosbag format data set.
+
 #================#
 # ORB Parameters #
 #================#
 
 Feature:
-  max_num_keypoints: 1000
-  ini_max_num_keypoints: 2000
   scale_factor: 1.2
   num_levels: 8
   ini_fast_threshold: 20
   min_fast_threshold: 7
-
-#=====================#
-# Tracking Parameters #
-#=====================#
-
-depth_threshold: 40.0
-depthmap_factor: 5000.0 # Note: Set it to 1.0 for the rosbag format data set.
 
 #====================#
 # Mapping Parameters #
