--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -65,6 +65,9 @@ list(APPEND EXECUTABLE_TARGETS run_kitti_slam)
 add_executable(run_tum_rgbd_slam run_tum_rgbd_slam.cc util/tum_rgbd_util.cc)
 list(APPEND EXECUTABLE_TARGETS run_tum_rgbd_slam)
 
+add_executable(run_tum_rgbd_localization run_tum_rgbd_localization.cc util/tum_rgbd_util.cc)
+list(APPEND EXECUTABLE_TARGETS run_tum_rgbd_localization)
+
 foreach(EXECUTABLE_TARGET IN LISTS EXECUTABLE_TARGETS)
     # Set output directory for executables
     set_target_properties(${EXECUTABLE_TARGET} PROPERTIES
