--- a/example/euroc/EuRoC_stereo.yaml
+++ b/example/euroc/EuRoC_stereo.yaml
@@ -76,6 +76,7 @@ Feature:
 
 Mapping:
   baseline_dist_thr: 0.11007784219
+  redundant_obs_ratio_thr: 0.9
 
 #========================#
 # Initializer Parameters #
