--- a/example/kitti/KITTI_stereo_04-12.yaml
+++ b/example/kitti/KITTI_stereo_04-12.yaml
@@ -52,6 +52,7 @@ Feature:
 
 Mapping:
   baseline_dist_thr: 0.53715065326
+  redundant_obs_ratio_thr: 0.9
 
 #========================#
 # Initializer Parameters #
