--- a/example/tum_rgbd/TUM_RGBD_mono_2.yaml
+++ b/example/tum_rgbd/TUM_RGBD_mono_2.yaml
@@ -50,6 +50,7 @@ Feature:
 
 Mapping:
   baseline_dist_thr_ratio: 0.02
+  redundant_obs_ratio_thr: 0.9
 
 #===========================#
 # PangolinViewer Parameters #
