--- a/example/tum_rgbd/TUM_RGBD_rgbd_1.yaml
+++ b/example/tum_rgbd/TUM_RGBD_rgbd_1.yaml
@@ -53,6 +53,7 @@ Feature:
 
 Mapping:
   baseline_dist_thr: 0.07471049682
+  redundant_obs_ratio_thr: 0.9
 
 #===========================#
 # PangolinViewer Parameters #
